deploy/develop/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jasrapo-backend
  labels:
    app.kubernetes.io/part-of: jasrapo
    app.kubernetes.io/managed-by: argocd
