deploy/develop/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: backend
spec:
  ingressClassName: traefik
  rules:
    - host: api.jasrapo.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
